# openai-xpe

./: Makefile  README.md  pyproject.toml  requirements.txt
src/: prompter.py
src/openai_xpe/: openai_prompter.py  prompter.py
